# LS-ETF-vol-decay-research

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: btc_bitx.yaml  default.yaml  paper_figs.yaml  qqq_tqqq.yaml
docs/: STRATEGY_BEHAVIOR.md
notebooks/: 00_data_sanity.ipynb  01_strategy_baseline.ipynb  02_regime_maps.ipynb  03_stress_tests.ipynb  04_paper_figures.ipynb  04_results_figures.ipynb
reports/paper/: notes.md  paper.md  refs.bib
src/: __init__.py  cli.py  constants.py
src/backtest/: costs.py  engine.py  metrics.py  reports.py  strategy.py
src/data/: cleaners.py  features.py  loaders.py  sources.py
src/experiments/: __init__.py  run_baseline.py  run_regimes.py  run_stress.py  run_sweeps.py
src/models/: __init__.py  hedge_ratio.py  leveraged_math.py  regimes.py
src/utils/: __init__.py  dates.py  io.py  logging.py  plotting.py
tests/: test_costs.py  test_engine.py  test_leveraged_math.py  test_regimes.py  test_stress.py  test_stress_monte_carlo.py
